--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.560.0",
-    "react-dom": "^19.2.1",
-    "react": "^19.2.1",
-    "react-router-dom": "6.22.3",
-    "@google/genai": "^1.33.0",
-    "firebase": "^12.6.0",
     "vite": "^7.2.7",
-    "@vitejs/plugin-react": "^5.1.2"
+    "@vitejs/plugin-react": "^5.1.2",
+    "react": "^19.2.3",
+    "lucide-react": "^0.561.0",
+    "react-router-dom": "^7.10.1",
+    "firebase": "^12.6.0",
+    "@google/genai": "^1.33.0",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
